# NeuroIDBench

./: .gitignore  CONFIGURATION.md  LICENSE  NEWDATA.md  README.md  RESEARCHERMETHOD.md  benchmark.py  dockerfile  environment.yaml  environment.yml  environment_old.yml  new_requirements.txt  pyproject.toml  run.py  setup.py  single_dataset_benchmark.py
.ipynb_checkpoints/: Draschkow_2018-checkpoint.ipynb
Final_Report/: body.tex  literature.bib  thesis.tex
HPC Backup/: download.py  environment.yml  neurobench.yml  pre_proc_Lee.py  script_hpc.sh
Jupypter_Notebooks/: Multi_Session_Evaluation.ipynb  Pre_Processing.ipynb  Single_Sess_Eval_Across_Datasets.ipynb  Single_Session_Evaluation.ipynb  Single_Vs_Multi_Session.ipynb
Juypter_Notebooks/: Experiment_Feature_Extraction.ipynb  Experiment_Pre_Processing.ipynb  Feature_Extraction.ipynb  Multi_Session_Evaluation.csv  Multi_Session_Evaluation.ipynb  Pre_Processing.ipynb  Single_Sess_Eval_Across_Datasets.ipynb  Single_Session_Evaluation.ipynb  Single_Vs_Multi.ipynb
Thesis Report/: Makefile  appendix.tex  commands.tex  literature.bib  packages.tex  thesis.tex  upb_cs_thesis.cls
brainModels/: __init__.py  benchmark.py  run.py
configuration_files/: AR_LDA.yml  AR_LR.yml  AR_NB.yml  PSD_KNN.yml  PSD_NB.yml  single_dataset.yml
deeb/: __init__.py  benchmark.py  single_dataset_benchmark.py  single_dataset_benchmark_old.py  utils.py
docs/: brainModels.analysis.rst  brainModels.datasets.rst  brainModels.evaluations.rst  brainModels.featureExtraction.rst  conf.py  index.rst  modules.rst
examples/: dataset.py  dataset_search.py  (+6 more)
(+443 files in other folders)
