[tool.poetry]
name = "deeb"
version = "0.4.6"
description = "Design and Evaluation of Electroencephalogram(EEG) - based Authentication Systems"
authors = ["Avinash Kumar Chaurasia"]
#supervisor = "Prof. Dr. Patricia Arias Cabarcos"


[tool.poetry.dependencies]
python = ">=3.8, <3.11"
#python = "^3.9.15"
numpy = "^1.24.1"
scipy = "^1.8.0"
mne = "^1.3.0"
pandas = "^1.5.2"
h5py = "^3.7.0"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
pyriemann = "^0.3"
PyYAML = "^6.0"
pooch = "^1.6.0"
requests = "^2.28.1"
tqdm = "^4.64.1"
coverage = "^7.0.1"
patool = "^1.12"
pyunpack = "^0.3"
zipfile36 = "^0.1.3"
python-magic = "^0.4.27"
autoreject = "^0.4.1"
statsmodels="^0.13.5"
mat73 = "^0.60"
tensorflow-macos = {version = "2.9", platform = "darwin"}
#tensorflow = ">=2.9.0rc0, <3.0.0"

[tool.poetry.group.deeplearning]
optional = true

[tool.poetry.group.deeplearning.dependencies]
tensorflow = ">=1.11.0"
keras = ">=1.11.0"
scikeras = "^0.10.0"
braindecode = "^0.7"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
Sphinx = "^6.0.0"
sphinx-gallery = "^0.11.1"
sphinx-bootstrap-theme = "^0.8.1"
numpydoc = "^1.5.0"
pre-commit = "^2.21.0"
m2r2 = "^0.3.3"
tdlda = {git = "https://github.com/jsosulski/tdlda.git", rev = "0.1.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["moabb"]
profile = "black"
line_length = 90
lines_after_imports = 2
